[package]
name = "namedlock"
version = "0.1.0"
authors = ["Jethro G. Beekman <rust@jbeekman.nl>"]
documentation = "https://jethrogb.github.io/namedlock-rs/doc/namedlock"
repository = "https://github.com/jethrogb/namedlock-rs"
readme = "README.md"
license = "GPL-2.0+"
description = "Namespaces for named locks"
keywords = ["mutex", "lock"]
