[package]
name = "namedlock"
version = "0.7.0"
authors = ["Jethro G. Beekman <rust@jbeekman.nl>"]
documentation = "https://jethrogb.github.io/namedlock-rs/doc/namedlock"
repository = "https://github.com/jethrogb/namedlock-rs"
readme = "README.md"
license = "GPL-2.0+"
description = "Namespaces for named locks"
keywords = ["mutex", "lock"]

[dependencies]
spin = { version = "0.4.0", optional = true }
core_collections = { version = "0.3", optional = true, features = ["rand"] }
parking_lot = { version = "0.7", optional = true }

[features]
default = ["std"]
std = []
